All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/SM_Request_Cache__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Internal object used to improve sync performance by caching frequently used information. This is also used to recover the sync state when client connections get dropped.</description>
    <label>Request Cache</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Request Cache Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>