All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Application_Filters__c.field-meta.xml
<CustomField>
    <fullName>SM_Application_Filters__c</fullName>
    <label>Application Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>