All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Application_Version__c.field-meta.xml
<CustomField>
    <fullName>SM_Application_Version__c</fullName>
    <label>Application Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>