All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Checklist_Wizard_Objects__c.field-meta.xml
<CustomField>
    <fullName>SM_Checklist_Wizard_Objects__c</fullName>
    <label>Checklist Wizard Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>