All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Client_Sync_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Client_Sync_Request_Id__c</fullName>
    <label>Client Sync Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>