All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Device_UDID__c.field-meta.xml
<CustomField>
    <fullName>SM_Device_UDID__c</fullName>
    <label>Device UDID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>