All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Doc_Template_IDs__c.field-meta.xml
<CustomField>
    <fullName>SM_Doc_Template_IDs__c</fullName>
    <label>Doc Template IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>