All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Download_Criteria_Object_List__c.field-meta.xml
<CustomField>
    <fullName>SM_Download_Criteria_Object_List__c</fullName>
    <label>Download Criteria Object List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>