All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Event_What_IDs__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_What_IDs__c</fullName>
    <description>Stores the What Ids of the events that are to be downloaded to the mobile client</description>
    <label>Event What IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>