All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Group_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Group_Profile_Id__c</fullName>
    <label>Group Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>