All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Mobile_Config_Settings__c.field-meta.xml
<CustomField>
    <fullName>SM_Mobile_Config_Settings__c</fullName>
    <label>Mobile Config Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>