All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Object_Access__c.field-meta.xml
<CustomField>
    <fullName>SM_Object_Access__c</fullName>
    <label>Object Access</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>