All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Question_Bank_IDs__c.field-meta.xml
<CustomField>
    <fullName>SM_Question_Bank_IDs__c</fullName>
    <description>Field stores question bank ids for caching</description>
    <label>Question Bank IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>