All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_SFW_Translations__c.field-meta.xml
<CustomField>
    <fullName>SM_SFW_Translations__c</fullName>
    <label>SFW Translations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>