All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SM_SOQL_Query__c</fullName>
    <label>SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>