All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_Sync_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SM_Sync_Start_Time__c</fullName>
    <label>Sync Start Time</label>
    <type>DateTime</type>
</CustomField>