All_Component_DX/force-app/main/default/objects/SM_Request_Cache__c/fields/SM_User_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Cache</relationshipName>
    <type>Lookup</type>
</CustomField>